# Digit-Recognition-AI

./: CMakeLists.txt  LICENSE  NeuralNetwork.cpp  NeuralNetwork.h  README.md  Timer.h  main.cpp  mnist_loader.cpp  mnist_loader.h  neural_network_save
CPLibrary/: Audio.cpp  Audio.h  CPL.cpp  CPL.h  CPLibrary.h  Colors.h  KeyInputs.h  Logging.h  Path.h  Shader.cpp  Shader.h  Text.cpp  Text.h
CPLibrary/shaders/: shader.frag  shader.vert  text.frag  text.vert  texture.frag  texture.vert
CPLibrary/shapes2D/: Circle.cpp  Circle.h  Line.cpp  Line.h  Rectangle.cpp  Rectangle.h  Texture2D.cpp  Texture2D.h  Triangle.cpp  Triangle.h
CPLibrary/timers/: Timer.h  TimerManager.cpp  TimerManager.h
saves/: neural_network_save (1000th gen)  neural_network_save (100th gen)  neural_network_save (10th gen)  neural_network_save (150th gen)  neural_network_save (20th gen)  neural_network_save (2nd gen)  neural_network_save (300th get)  neural_network_save (50th gen)  neural_network_save (5th gen)
src/: CustomLoader.cpp  CustomLoader.h  MNISTloader.cpp  MNISTloader.h  NeuralNetwork.cpp  NeuralNetwork.h  TimerChrono.h  main.cpp
